--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="main.css" />
-    <title>DSA Lagos</title>
+    <title>DSA Study Group</title>
   </head>
 
   <body>
@@ -41,6 +41,14 @@
       </a>
       <a href="week-1011.html">
         <p>Recursion</p>
+      </a>
+    </div>
+    <br/>
+    <hr />
+    <br/>
+    <div>
+      <a href="https://github.com/tayoogunbiyi/dsa-app" target="_blank">
+        <p>Site template courtesy of Eyitayo ogunbiyi and Abdulsammad Yisau</p>
       </a>
     </div>
     <script src="./js/main.js"></script>
