--- a/week-1011.html
+++ b/week-1011.html
@@ -9,14 +9,14 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="main.css" />
-    <title>Week 10 & 11 (Recursion) - DSA Lagos</title>
+    <title>Week 6 (Recursion) - DSA Study Group</title>
   </head>
 
   <body>
     <div>
-      <h2 class="week-title">Week 10 & 11 Resources</h2>
+      <h2 class="week-title">Week 6 Resources</h2>
       <ul>
-        <li>Week 10 & 11's Topic is Recursion</li>
+        <li>Week 6's Topic is Recursion</li>
         <li>
           There's an entire chapter in CTCI about Recursion, Chapter 8
         </li>
@@ -33,6 +33,10 @@
         <li>
           Good practice involves attempting to write a Recursion class yourself, with
           all the common methods.
+        </li>
+        <li>
+            Bonus reads:
+            <a href="https://btholt.github.io/complete-intro-to-computer-science/" target="_blank">Brian Holt's Intro to Comp. Science Blog</a>
         </li>
       </ul>
     </div>
