--- a/week-34.html
+++ b/week-34.html
@@ -7,14 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="main.css" />
-    <title>Week 3 & 4 - DSA Lagos</title>
+    <title>Week 2 - DSA Study Group</title>
 </head>
 
 <body>
     <div>
-        <h2 class="week-title">Week 3 & 4 Resources </h2>
+        <h2 class="week-title">Week 2 Resources </h2>
         <ul>
-            <li>Week 3 & 4's Topic is On Hash Tables & Hash Sets</li>
+            <li>Week 2's Topic is On Hash Tables & Hash Sets</li>
             <li>There's a small subsection in CTCI about Hash tables (Pg 99)
             </li>
             <li>
@@ -40,6 +40,10 @@
             </li>
             <li>
                 Question Of The Week - What is a collision in hash tables and how can we work around them?
+            </li>
+            <li>
+                Bonus reads:
+                <a href="https://btholt.github.io/complete-intro-to-computer-science/" target="_blank">Brian Holt's Intro to Comp. Science Blog</a>
             </li>
         </ul>
     </div>
