--- a/week-56.html
+++ b/week-56.html
@@ -7,14 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="main.css" />
-    <title>Week 5 & 6 (Linked Lists) - DSA Lagos</title>
+    <title>Week 3 (Linked Lists) - DSA Study Group</title>
 </head>
 
 <body>
     <div>
-        <h2 class="week-title">Week 5 & 6 Resources </h2>
+        <h2 class="week-title">Week 3 Resources </h2>
         <ul>
-            <li>Week 5 & 6's Topic is On Linked Lists</li>
+            <li>Week 3's Topic is On Linked Lists</li>
             <li>There's an entire chapter in CTCI about Linked Lists (Pg 103)
             </li>
             <li>
@@ -33,6 +33,10 @@
             </li>
             <li>
                 My favorite linked list problem is this -> <a href="https://leetcode.com/problems/copy-list-with-random-pointer/" target="_blank">Clone A Linked List with random pointer</a>
+            </li>
+            <li>
+                Bonus reads:
+                <a href="https://btholt.github.io/complete-intro-to-computer-science/" target="_blank">Brian Holt's Intro to Comp. Science Blog</a>
             </li>
         </ul>
     </div>
