--- a/week-78.html
+++ b/week-78.html
@@ -9,15 +9,15 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="main.css" />
-    <title>Week 7 & 8 (Stacks And Queues) - DSA Lagos</title>
+    <title>Week 4 (Stacks And Queues) - DSA Study Group</title>
   </head>
 
   <body>
     <div>
-      <h2 class="week-title">Week 7 & 8 Resources</h2>
+      <h2 class="week-title">Week 4 Resources</h2>
       <ul>
         <li>Merry Christmas & Happy New Year ! </li>
-        <li>Week 7 & 8's Topic is On Stacks & Queues</li>
+        <li>Week 4's Topic is On Stacks & Queues</li>
         <li>
           There's an entire chapter in CTCI about Stacks & Queues, Chapter 3
         </li>
@@ -53,6 +53,10 @@
             target="_blank"
             >Evaluate Reverse Polish Notation</a
           >
+        </li>
+        <li>
+            Bonus reads:
+            <a href="https://btholt.github.io/complete-intro-to-computer-science/" target="_blank">Brian Holt's Intro to Comp. Science Blog</a>
         </li>
       </ul>
     </div>
