--- a/week-910.html
+++ b/week-910.html
@@ -9,14 +9,14 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="main.css" />
-    <title>Week 9 & 10 (Trees) - DSA Lagos</title>
+    <title>Week 5 (Trees) - DSA Study Group</title>
   </head>
 
   <body>
     <div>
-      <h2 class="week-title">Week 9 & 10 Resources</h2>
+      <h2 class="week-title">Week 5 Resources</h2>
       <ul>
-        <li>Week 9 & 10's Topic is Binary Trees</li>
+        <li>Week 5's Topic is Binary Trees</li>
         <li>
           There's an entire chapter in CTCI about Trees ( & Graphs ), Chapter 4
         </li>
@@ -46,6 +46,10 @@
             target="_blank"
             >Lowest Common Ancestor Of A Binary Tree</a
           >
+        </li>
+        <li>
+            Bonus reads:
+            <a href="https://btholt.github.io/complete-intro-to-computer-science/" target="_blank">Brian Holt's Intro to Comp. Science Blog</a>
         </li>
       </ul>
     </div>
