--- a/week-12.html
+++ b/week-12.html
@@ -7,14 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="main.css" />
-    <title>Week 1 & 2 - DSA Lagos</title>
+    <title>Week 1 - DSA Study Group</title>
 </head>
 
 <body>
     <div>
-        <h2 class="week-title">Week 1 & 2 Resources </h2>
+        <h2 class="week-title">Week 1 Resources </h2>
         <ul>
-            <li>Week 1 & 2's Topic is On Arrays & Strings</li>
+            <li>Week 1's Topic is On Arrays & Strings</li>
             <li>You can read the text in chapter 1 of Cracking the coding interview (Pg 88)
                 for an introduction to how arrays work under the hood
             </li>
@@ -43,6 +43,10 @@
                 Question Of The Week - Why are arrays able to give us constant time access (O(1) i.e really really fast)
                 to
                 elements,unlike other data structures ?
+            </li>
+            <li>
+                Bonus reads:
+                <a href="https://btholt.github.io/complete-intro-to-computer-science/" target="_blank">Brian Holt's Intro to Comp. Science Blog</a>
             </li>
         </ul>
     </div>
