added question bank

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         This section contains links to various resources on week's topics
       </h5>
       <a href="week-12.html">
-        <p> Arrays</p>
+        <p> Arrays and Strings</p>
       </a>
       <a href="week-34.html">
         <p>Hash Tables & Sets</p>
@@ -48,7 +48,7 @@
     <br/>
     <div>
       <a href="https://github.com/tayoogunbiyi/dsa-app" target="_blank">
-        <p>Site template courtesy of Eyitayo ogunbiyi and Abdulsammad Yisau</p>
+        <p>Initial site template courtesy of Eyitayo ogunbiyi and Abdulsammad Yisau</p>
       </a>
     </div>
     <script src="./js/main.js"></script>
